--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,32 +1,20 @@
 <idea-plugin>
-    <id>cn.kt.better.mybatis.generator.id</id>
-    <name>better-mybatis-generator</name>
-    <version>1.5.5</version>
-    <vendor email="396367775@qq.com" url="https://github.com/kmaster/better-mybatis-generator">kang tian</vendor>
+    <id>name.chxj.mybatis.generator.id</id>
+    <name>mybatis-generator</name>
+    <version>1.0-rc</version>
+    <vendor email="chxj1992@gmail.com" url="https://github.com/chxj1992/better-mybatis-generator">chxj1992</vendor>
 
     <description>
         <![CDATA[
-
     <ul>
-        <li>插件功能：在idea的database工具中使用，选择表，生成mybatis相关的代码。已支持的数据库：Mysql、Mysql8、Oracle、MariaDB。待验证：PostgreSQL与SQL Server </li>
-        <li>Step1: 连接Database: <kbd>View</kbd> > <kbd>Tool Windows</kbd> > <kbd>Database</kbd>。</li>
-        <li>Step2: 选择表（一或n,建议n小于10），右击 选择 <kbd>mybatis generate</kbd> 打开插件主页。</li>
-        <li>Step3: 填写配置，检查无误后点击 <kbd>ok</kbd>。</li>
-        <li>Step4: 首次使用时请提供账号密码。</li>
-        <li>Step5: 检查、使用生成的代码。</li>
-   <li>Setting: <kbd>Tools</kbd> > <kbd>MyBatis generator Plugin</kbd> 此处设置默认配置，未设置则使用程序默认配置。</li>
-   <li>更多的插件使用截图和注意事项见： <a href="https://github.com/kmaster/better-mybatis-generator/blob/master/README.md">插件使用介绍</a></li>
-   </ul>
-
-   <ul>
-        <li>Function: Use in idea database tool，right click table to generate mybatis files (include:dao、example、domain、xml).Currently supported databases: Mysql,Mysql8, Oracle. To be verified: Postgre SQL and SQL Server</li>
-        <li>Step1: Connecting to Your Database: <kbd>View</kbd> > <kbd>Tool Windows</kbd> > <kbd>Database</kbd>.</li>
-        <li>Step2: Select tables(one or N,recommend N less than 10),Right Click and select <kbd>mybatis generate</kbd> to open generator main UI.</li>
-        <li>Step3: Check configuration in main ui,click <kbd>ok</kbd>.</li>
-        <li>Step4: Provide account and password for the first time.</li>
-        <li>Step5: Generate work finish,check files and it can be use.</li>
-   <li>Setting: <kbd>Tools</kbd> > <kbd>MyBatis generator Plugin</kbd> set custom default configuration，If not, use the program default configuration.</li>
-   <li>More tutorial please visit <a href="https://github.com/kmaster/better-mybatis-generator/blob/master/README.md">here </a></li>
+        <li>在 IDEA 的 database 工具中使用, 选择表, 生成mybatis相关的代码, 具体步骤如下: </li>
+        <li>Step1: 连接Database: <kbd>View</kbd> > <kbd>Tool Windows</kbd> > <kbd>Database</kbd></li>
+        <li>Step2: 选择表, 右击 选择 <kbd>mybatis generator</kbd> 打开插件主页</li>
+        <li>Step3: 填写配置, 检查无误后点击 <kbd>GENERATE!</kbd></li>
+        <li>Step4: 首次使用时请根据提示输入数据库的账号和密码</li>
+        <li>Step5: 检查, 使用生成的代码</li>
+   <li>默认配置: <kbd>Tools</kbd> > <kbd>MyBatis Generator Plugin</kbd> 可在此处修改插件生成规则的默认配置</li>
+   <li>更多的插件使用截图和注意事项见: <a href="https://github.com/chxj1992/mybatis-generator-plugin">插件使用介绍</a></li>
    </ul>
     ]]>
 
@@ -35,29 +23,9 @@
     <change-notes>
         <![CDATA[
    <ul>
-       <li>v1.5.5<br/>
-            用后台任务执行代码生成任务，在状态栏显示进度，去掉结束后的确认界面以解决多表生成时的不断确认问题。<br/>
-            Execute the code generation task with the background task, display the progress in the status bar,
-            and remove the confirmation interface after the end to solve the continuous confirmation problem when the multi-table is generated.
-        </li>
-       <li>v1.5.4<br/>
-            在使用mysql8时，需要在数据库连接url上添加'?serverTimezone=GMT' 并在生成配置中勾选上mysql8选项。<br/>
-            When connecting mysql8,add  '?serverTimezone=GMT'  at URL.
-        </li>
-       <li>v1.5<br/>
-            Support for IDEA the latest version.<br/>
-            Optimize Mysql8 database connection.<br/>
-            Add MariaDB support
-        </li>
-        <li>v1.4<br/>
-            Fixed errors in oracle connection failures and code generation failures.
-        </li>
-        <li>v1.3<br/>
-            Reduced version requirements, Change Message and Options description to English.
-        </li>
-        <li>v1.0<br/>
-            Initial release of the plugin.<br/>
-            Provide mybatis Generate function according to configuration and default configuration in setting.
+        <li>v1.0-rc<br/>
+           基于<a href="https://github.com/kmaster/better-mybatis-generator"> better-mybatis-generator </a>二次开发而成. <br>
+           本插件在原有功能的基础上增加了对批量插入, JavaDoc注释, @Mapper注解, 方法命名 等做了改造, 使之符合团队的规范要求.
         </li>
    </ul>
     ]]>
@@ -67,15 +35,15 @@
 
     <depends optional="true">com.intellij.database</depends>
     <extensions defaultExtensionNs="com.intellij">
-        <projectService serviceInterface="cn.kt.setting.PersistentService"
-                        serviceImplementation="cn.kt.setting.PersistentService"/>
+        <projectService serviceInterface="name.chxj.mybatis.generator.setting.PersistentService"
+                        serviceImplementation="name.chxj.mybatis.generator.setting.PersistentService"/>
         <projectConfigurable groupId="tools" displayName="Mybatis generator plugin" id="gene.id"
-                             instance="cn.kt.setting.SettingConfigurable"/>
+                             instance="name.chxj.mybatis.generator.setting.SettingConfigurable"/>
     </extensions>
 
     <actions>
-        <action id="mabatis-generate-action" class="cn.kt.action.MainAction" text="mabatis-generate"
-                description="mybatis generator idea plugin">
+        <action id="mybatis-generator-action" class="name.chxj.mybatis.generator.action.MainAction" text="mybatis-generator"
+                description="Mybatis Generator IDEA Plugin">
             <add-to-group group-id="DatabaseViewPopupMenu" anchor="last"/>
         </action>
 
