--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -37,7 +37,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <projectService serviceInterface="name.chxj.mybatis.generator.setting.PersistentService"
                         serviceImplementation="name.chxj.mybatis.generator.setting.PersistentService"/>
-        <projectConfigurable groupId="tools" displayName="Mybatis generator plugin" id="gene.id"
+        <projectConfigurable groupId="tools" displayName="Mybatis Generator Plugin" id="gene.id"
                              instance="name.chxj.mybatis.generator.setting.SettingConfigurable"/>
     </extensions>
 
