upgrade to mbg 1.3.7 modified

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>name.chxj.mybatis.generator.id</id>
     <name>mybatis-generator</name>
-    <version>1.0-rc</version>
+    <version>1.0-RC</version>
     <vendor email="chxj1992@gmail.com" url="https://github.com/chxj1992/better-mybatis-generator">chxj1992</vendor>
 
     <description>
@@ -23,7 +23,7 @@
     <change-notes>
         <![CDATA[
    <ul>
-        <li>v1.0-rc<br/>
+        <li>v1.0-RC<br/>
            本插件基于<a href="https://github.com/kmaster/better-mybatis-generator"> better-mybatis-generator </a>二次开发而成. <br>
            在原有功能的基础上增加了对批量插入, JavaDoc注释, @Mapper注解, 方法命名 等做了改造, 使之符合团队的规范要求.
         </li>
